# termai-cicd

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/services/: health_service.py
k8s/: deployment.yaml  ingress.yaml  service.yaml
tests/: test_health_integration.py  test_health_unit.py
