[project]
name = "termai-cicd"
version = "0.1.0"
description = "CI/CD testing project for Termai with a simple FastAPI health service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "uvicorn>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0,<9.0.0",
    "httpx>=0.28.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
